name:                snaplet-aws
version:             0.1.0.0
synopsis:            A snaplet wrapping access to AWS via the amazonka package.
description:         A boilerplate snaplet to conveniently allow amazonka aws functions
                     to be lifted into snap handlers.
license:             OtherLicense
license-file:        LICENSE
author:              Samuel Yallop
maintainer:          syallop@gmail.com
category:            Web, Snap, AWS
build-type:          Simple

extra-source-files:  LICENSE
                   , README.md

cabal-version:       >=1.10

library
  exposed-modules:   Snap.Snaplet.AWS
  other-extensions:  OverloadedStrings, TemplateHaskell, Rank2Types
  build-depends:     base
                   , amazonka
                   , configurator
                   , exceptions
                   , lens
                   , mtl
                   , snap

  hs-source-dirs:    src
  default-language:  Haskell2010

